@@ -12,7 +12,10 @@
 
 
 0.16.0 ---
-Fix resizer bar height on verical window resize
+- Fix columns' resizer bar height on verical window resize
+- Fix crash on MIDI learn global commands
+- Fix wrong channel routing when triggering MIDI learnt commands
+- Use actual buffer size from KernelAudio when loading channels from a patch
 
 
 0.16.0 beta-2 --- 2019 . 11 . 11
